fixed ibc text overflow

--- a/public/stylesheets/css/class.css
+++ b/public/stylesheets/css/class.css
@@ -849,6 +849,14 @@ html, body, .comdex .cmuk-overflow-auto, .modal .modalContent .modalBody form .f
   .pieChartContainer div {
     flex: 50%; }
 
+.pieChartContainer .ibcDenom .infoRowLabel {
+  width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+}
+
 .comdex .cmuk-sticky-fixed {
   width: 100% !important; }
 .comdex .buttonPrimary {
